[package]
name = "selium-userland"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-shear]
ignored-paths = ["macros/tests/**/*.rs"]

[dependencies]
anyhow = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, features = ["alloc", "std"] }
rkyv = { workspace = true }
selium-abi = { workspace = true }
selium-userland-macros = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = [
  "alloc",
  "registry",
  "std",
] }

[build-dependencies]
flatbuffers-build = { workspace = true }
flatc-fork = { workspace = true }
