[package]
name = "selium-test-request-reply"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
anyhow = { workspace = true }
cargo = { workspace = true, features = ["http-transport-reqwest"] }
futures = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
selium-remote-client = { workspace = true }
selium-userland = { path = "../../system/userland" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
flatbuffers-build = { workspace = true }
flatc-fork = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-userland = { path = "../../system/userland" }
tracing = { workspace = true }
